deployment/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base-deployment-canary 
  namespace: base 
  labels: 
    app: base-canary
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: base-canary
  template:
    metadata:
      labels:
        app: base-canary
    spec:
      containers: 
        - name: nginx
          image: canaryimage:1.0
          ports:
            - containerPort: 80
