deployment/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: base-service-canary
  namespace: base
  labels:
    app: base-canary
spec:
  selector:
    app: base-canary
  ports:
    - protocol: TCP
      port: 80 #publicar na porta 80 do cluster kubernetes. porta que o service vai expor de acesso aos pods para o ingress
      targetPort: 80 #porta do container onde app está rodando.
